--- a/style.css
+++ b/style.css
@@ -3,6 +3,30 @@ body::-webkit-scrollbar {
   color:white;
 }
 
+.slidecontainer {
+  width: 33%;
+  float: right;
+  text-align: center;
+}
+.slidervalue {
+}
+
+ol {
+  float: right;
+}
+.sliderul {
+  height: 5%;
+}
+.slider {
+  width: 80%;
+  -webkit-appearance: none;
+  background-image: linear-gradient(to right, #ffffff, #ff6363);
+  background-repeat: no-repeat;
+  background-size: 10% 100%;
+  opacity: 0.7;
+  border-radius: 20px;
+}
+
 /* Hide scrollbar for IE and Edge */
 body {
   -ms-overflow-style: none;
